# Novus

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CLEAN.bat  CONTRIBUTING.md  LICENSE  README.ja.rst  README.md  README.rst  build.bat  clean.bat  install.bat  pyproject.toml  requirements.txt  setup.py  upload.bat
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/linters/: .isort.cfg  .mypy.ini
.github/workflows/: super-linter.yml
discord/: __init__.py  __main__.py  abc.py  activity.py  appinfo.py  application_commands.py  asset.py  audit_logs.py  backoff.py  channel.py  client.py  colour.py  components.py  context_managers.py  embeds.py  emoji.py  enums.py  errors.py  file.py  flags.py  gateway.py  guild.py  guild_scheduled_event.py  guild_scheduled_events.py  http.py  integrations.py  interactions.py  invite.py  iterators.py  member.py  mentions.py  message.py  mixins.py  object.py  oggparse.py  opus.py  partial_emoji.py  permissions.py  player.py  raw_models.py  (+14 more)
discord/types/: __init__.py  activity.py  appinfo.py  audit_log.py  channel.py  components.py  embed.py  emoji.py  gateway.py  guild.py  guild_scheduled_event.py  integration.py  interactions.py  invite.py  member.py  message.py  raw_models.py  role.py  snowflake.py  sticker.py  team.py  template.py  threads.py  user.py  (+4 more)
docs/: CNAME  Makefile  api.rst  conf.py  configuration.rst  dpy_novus_change.rst  faq.rst  index.rst  intents.rst  intro.rst  logging.rst  make.bat  migrating_2.rst  migrating_to_async.rst  quickstart.rst  whats_new.rst
examples/: background_task.py  background_task_asyncio.py  basic_bot.py  basic_selectmenu.py  basic_voice.py  components.py  converters.py  custom_context.py  dispatch.py  edits.py  guessing_game.py  new_member.py  reaction_roles.py  secret.py  slash_commands.py  user_context_command.py
novus/: __init__.py  errors.py  flags.py  oauth.py  types.py
tests/: .env.example  _setup.py  example.env.toml  example.env.yaml  test_audit_log.py  test_auto_moderation.py  test_scheduled_events.py  test_user.py  test_user_api.py
voxelbotutils/: __init__.py
(+343 files in other folders)
